# voice-gender-prediction-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: benchmark.py
src/gender_prediction/: api.py  audio.py  config.py  export.py  logging_setup.py  model.py
